apps/staging/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  ingressClassName: traefik
  rules:
    # to be accessed from LAN/VPN only
    - host: sonarr.milanoid.net # subdomain of my cloudflare domain
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 8989
            path: /
            pathType: Prefix
